# citibike-case

./: .gitignore  Makefile  README.md  RESULTS.md  pyproject.toml  requirements.txt
notebooks/: 01_eda_citibike.ipynb  02_eda_nypd.ipynb  03_spatial_analysis.ipynb  04_risk_model.ipynb
outputs/figures/: 01_station_density_map.html  02_bike_accident_heatmap.html  03_station_risk_map.html
src/data/: download.py  preprocess.py
src/features/: risk_features.py
src/visualization/: maps.py
